--- a/collection.html
+++ b/collection.html
@@ -17,31 +17,30 @@
 </head>
 
 <body>
-    <!-- navbar -->
-    <nav id="navbar" class="d-flex justify-content-between align-items-center p-3 shadow p-2 bg-body rounded">
-        <h1>Nostra</h1>
-        <div class="d-flex column-gap-3 ">
-            <p><a href="/index.html" class="text-decoration-none text-black">HOME</a></p>
-            <p><a href="/collection.html" class="text-decoration-none text-black">COLLECTION</a></p>
-            <p><a href="/cantact.html" class="text-decoration-none text-black">CONTACT</a></p>
-        </div>
-        <div class="toggle-menu">
-            <i class="fa-solid fa-bars" onclick="shownav()"></i>
-        </div>
-    </nav>
-    <!-- side navbar -->
-    <div class="side-navbar">
-        <p class="xmark">
-            <i class="fa-solid fa-xmark" onclick="closenav()"></i>
-        </p>
-        <div class="side-navbar-links">
-            <p><a href="/index.html" class="text-decoration-none text-white ">HOME</a></p>
-            <p><a href="/collection.html" class="text-decoration-none text-white">COLLECTION</a></p>
-            <p><a href="/cantact.html" class="text-decoration-none text-white">CONTACT</a></p>
-        </div>
-
+   <!-- navbar -->
+   <nav id="navbar" class="d-flex justify-content-between align-items-center p-3 shadow p-2 bg-body rounded">
+    <h1>Nostra</h1>
+    <div class="d-flex column-gap-3 ">
+        <p><a href="/index.html" class="text-decoration-none text-black">HOME</a></p>
+        <p><a href="/collection.html" class="text-decoration-none text-black">COLLECTION</a></p>
+        <p><a href="/cantact.html" class="text-decoration-none text-black">CONTACT</a></p>
+    </div>
+    <div class="toggle-menu">
+        <i class="fa-solid fa-bars" onclick="shownav()"></i>
+    </div>
+</nav>
+<!-- side navbar -->
+<div class="side-navbar">
+    <p class="xmark">
+        <i class="fa-solid fa-xmark" onclick="closenav()"></i>
+    </p>
+    <div class="side-navbar-links">
+        <p><a href="/index.html" class="text-decoration-none text-white ">HOME</a></p>
+        <p><a href="/collection.html" class="text-decoration-none text-white">COLLECTION</a></p>
+        <p><a href="/cantact.html" class="text-decoration-none text-white">CONTACT</a></p>
     </div>
 
+</div>
     <!-- product -->
     <div class="product-section">
         <form class="product-search">
@@ -107,7 +106,7 @@
 
 </body>
 
-<script src="/index.js"></script>
+<script src="/java.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
